dev: update conf wirguard

--- a/config/wireguard/templates/peer.conf
+++ b/config/wireguard/templates/peer.conf
@@ -1,10 +1,14 @@
+####################################################################################
+######   This config is indeended to be used with the plex_wg_stack project  #######
+######       it's depend on the scripts in the /scripts/wgclient folder      #######
+####################################################################################
 [Interface]
 Address = ${CLIENT_IP}
 PrivateKey = $(cat /config/${PEER_ID}/privatekey-${PEER_ID})
 ListenPort = 51820
 DNS = ${PEERDNS}
-PostUp = bash /scripts/wgclient/PostUp.sh
-PostDown = bash /scripts/wgclient/PostDown.sh
+PostUp = bash /scripts/wgclient/PostUp.sh %i
+PostDown = bash /scripts/wgclient/PostDown.sh %i
 
 [Peer]
 PublicKey = $(cat /config/server/publickey-server)
