--- a/config/wireguard/templates/server.conf
+++ b/config/wireguard/templates/server.conf
@@ -1,6 +1,25 @@
+####################################################################################
+######   This config is indeended to be used with the plex_wg_stack project  #######
+######       it's depend on the scripts in the /scripts/wgserver folder      #######
+####################################################################################
 [Interface]
 Address = ${INTERFACE}.1
 ListenPort = 51820
 PrivateKey = $(cat /config/server/privatekey-server)
-PostUp = bash /scripts/wgserver/PostUp.sh ${INTERFACE}.1
-PostDown = bash /scripts/wgserver/PostDown.sh ${INTERFACE}.1
+PostUp = bash /scripts/wgserver/PostUp.sh %i
+# PostUp = bash /scripts/wgserver/ForwardUp.sh %i 32400 10.0.0.2
+PostDown = bash /scripts/wgserver/PostDown.sh %i
+# PostDown = bash /scripts/wgserver/ForwardDown.sh %i 32400 10.0.0.2
+
+
+# ##########          PORT FORWARDING EXAMPLE IN CONTAINER
+# # --------------------------------------------------------------------------------
+# # You can use the following scripts with arguments to add in the PostUp and PostDown lines:
+# # PostUp = bash /scripts/wgserver/ForwardUp.sh %i <PORT> <CLIENT_IP>
+# # PostDown = bash /scripts/wgserver/ForwardDown.sh %i <PORT> <CLIENT_IP>
+# # --------------------------------------------------------------------------------
+# # The port must be mapped from the container to the host in the docker-compose.yml file like :
+# # ports:
+# #   - 32400:32400
+# # --------------------------------------------------------------------------------
+# Server will need to be restarted after adding port forwarding rules to take effect
