--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,5 @@
 site_name: Plex Wireguard Stack
+site_url: https://limedrive.github.io/plex_wg_stack/
 repo_url: https://github.com/LimeDrive/plex_wg_stack
 repo_name: LimeDrive/plex_wg_stack
 
