--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,9 +5,11 @@ repo_name: LimeDrive/plex_wg_stack
 
 nav:
   - Home: index.md
+  - Wireguard_Stack:
+    - VPS Setup: wg-stack/install_server_vps.md
+    - Client Setup: wg-stack/client_install.md
   - Tutorials:
       - Fix for SSDV2: gluetun/gluetun_plex_install_ssdv2.md
-      - VPS Setup: wg-stack/install_server_vps.md
 
 theme:
   icon:
